[workspace]

[package]
name = "suricata-iec104-parser"
version = "0.1.0"
edition = "2021"
authors = ["Fidelis Farm & Technologies, LLC"]
license = "GPL-2.0-only"
description = "Suricata application-layer parser plugin for IEC 60870-5-104 (IEC 104) telecontrol protocol"

[lib]
name = "suricata_iec104_parser"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
